@@ -1,45 +1,6 @@
-# Avoid version control files.
-\bRCS\b
-\bCVS\b
-,v$
-\B\.svn\b
-\B\.cvsignore$
+# This is a shorter MANIFEST.SKIP. Credits go to Dist::Zilla :)
 
-# Avoid Makemaker generated and utility files.
-\bMakefile$
-\bblib
-\bMakeMaker-\d
-\bpm_to_blib$
-\bblibdirs$
-^MANIFEST\.SKIP$
-
-# Avoid Module::Build generated and utility files.
-\bBuild$
-\bBuild.bat$
-\b_build
-
-# Avoid Devel::Cover generated files
-\bcover_db
-
-# Avoid temp and backup files.
-~$
-\.tmp$
-\.old$
-\.bak$
-\#$
-\.#
-\.rej$
-
-# Avoid OS-specific files/dirs
-#   Mac OSX metadata
-\B\.DS_Store
-#   Mac OSX SMB mount metadata files
-\B\._
-# Avoid archives of this distribution
-\bPadre-Plugin-PerlTidy-[\d\.\_]+
-
-# .po template
-messages.pot
-
-# project config
-padre.yml
+# avoid pot files (gettext)
+^MANIFEST.SKIP$
+\.po$
+\.pot$
