@@ -1,0 +1,20 @@
+name             = Padre-Plugin-PerlTidy
+author           = Brian Cassidy <bricas@cpan.org>
+author           = Patrick Donelan
+author           = Ahmad M. Zawawi <ahmad.zawawi@gmail.com>
+license          = Perl_5
+version          = 0.13
+copyright_holder = Patrick Donelanm, Brian Cassidy
+
+[@PadrePlugin]
+
+homepage         = http://padre.perlide.org
+repository       = http://svn.perlide.org/padre/trunk/Padre-Plugin-PerlTidy/
+
+[Prereqs / TestRequires]
+Test::More       = 0
+Locale::Msgfmt   = 0.14
+
+[Prereqs]
+Padre            = 0.57
+Perl::Tidy       = 0
