@@ -1,6 +1,0 @@
-use strict;
-use warnings;
-
-use Test::More tests => 1;
-
-use_ok('Padre::Plugin::PerlTidy');
