@@ -1,6 +1,8 @@
 Revision history for Perl extension Padre::Plugin::PerlTidy.
 
-0.13  Not released
+{{$NEXT}}
+    - Switched to Dist::Zilla (AZAWAWI)
+    - Fixed t/00-load.t to work under no DISPLAY (AZAWAWI)
     - Fix the uninitialized variable warning when tidying an unsaved tab (AZAWAWI)
 
 0.12  Tue Oct 12 2010
